--- a/public/index.html
+++ b/public/index.html
@@ -17,7 +17,7 @@
   <ul id="list"></ul>
   <form id="new-task-form">
     <input type="text" id="new-task-title">
-    <button type="submit">Add</button>
+    <button type="submit">追加</button>
   </form>
 </body>
 </html>
